# cmake-gtest-template

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CMakeLists.txt  LICENSE  README.md  build.sh  cleanbuild.sh  setup.sh
cmake/modules/: CodeCoverage.cmake
release/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
release/src/consoleApp/: CTestTestfile.cmake  Makefile  cmake_install.cmake
release/src/lib/: CTestTestfile.cmake  Makefile  cmake_install.cmake
release/src/testsConsoleApp/: CTestTestfile.cmake  Makefile  cmake_install.cmake  test_main[1]_include.cmake  test_main[1]_tests.cmake
release/src/testsLib/: CTestTestfile.cmake  Makefile  cmake_install.cmake  test_mylibrary[1]_include.cmake  test_mylibrary[1]_tests.cmake
scripts/: build.sh  cleanbuild.sh  release.sh  setup.sh  test.sh
src/consoleApp/: CMakeLists.txt  main.cpp  some.h
src/include/: copyfi_h.h
src/lib/: CMakeLists.txt  mylibrary.cpp  mylibrary.h
src/testsConsoleApp/: CMakeLists.txt  test_main.cpp
src/testsLib/: CMakeLists.txt  test_mylibrary.cpp
